--- a/style.css
+++ b/style.css
@@ -5,10 +5,10 @@
 header {
   color: white;
   position: fixed;
-  background:rgb(19, 19, 19);
+  background: rgb(19, 19, 19);
   padding: 0 2vw;
   z-index: 100;
-  box-shadow: 0 5px 15px rgba(0,0,0,0.6);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.6);
   transition: 1s;
   width: auto;
   border-radius: 0 0 10px 0;
@@ -19,8 +19,15 @@ header.active {
 }
 
 header h1 {
-  min-width: 75vw;
+  min-width: 50vw;
   margin: 2vh 0;
+}
+
+@media only screen and (max-width: 700px) {
+  header h1 {
+    min-width: 75vw;
+    margin: 2vh 0;
+  }
 }
 
 body {
